[gd_scene load_steps=15 format=2]

[ext_resource path="res://themes/main_menu.tres" type="Theme" id=1]
[ext_resource path="res://code/ui/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://code/ui/LevelSelect.gd" type="Script" id=4]
[ext_resource path="res://scenes/ui/LevelItem.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/levels/Level1.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/levels/Tutorial.tscn" type="PackedScene" id=7]
[ext_resource path="res://fonts/jupiteroid/Jupiteroid-Bold.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://graphics/reaper.png" type="Texture" id=9]

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform sampler2D noise1;


uniform vec4 back_color : hint_color;
uniform vec4 color1 : hint_color;
uniform vec4 color2 : hint_color;

uniform vec2 scroll1 = vec2(-0.05, 0.0);
uniform float wave_freq = 0.2;


void fragment(){
	float wave = sin((UV.y + TIME * 0.3) * wave_freq) * 1.05;
	vec4 depth1 = texture(noise1, vec2(UV.x, wave) + scroll1 * TIME);
	
	vec4 color = mix(color1, back_color, depth1.r);
	
	vec4 wave_col = mix(color1, back_color, depth1.r);
	
	
	COLOR = color;
	
}"

[sub_resource type="OpenSimplexNoise" id=4]
persistence = 0.357
lacunarity = 2.56

[sub_resource type="NoiseTexture" id=5]
seamless = true
noise = SubResource( 4 )

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/back_color = Color( 0.470588, 0.415686, 0.47451, 1 )
shader_param/color1 = Color( 0.0392157, 0.00392157, 0.0901961, 1 )
shader_param/color2 = null
shader_param/scroll1 = Vector2( -0.05, 0 )
shader_param/wave_freq = 0.2
shader_param/noise1 = SubResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 8 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
material = SubResource( 3 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Main" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Buttons" type="VBoxContainer" parent="Main"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 812.0
margin_top = 340.0
margin_right = 1068.0
margin_bottom = 700.0

[node name="Play" type="Label" parent="Main/Buttons"]
margin_right = 256.0
margin_bottom = 87.0
mouse_filter = 0
theme = ExtResource( 1 )
text = "Jouer"
align = 1

[node name="Extra" type="Label" parent="Main/Buttons"]
visible = false
margin_top = 91.0
margin_right = 256.0
margin_bottom = 178.0
mouse_filter = 1
theme = ExtResource( 1 )
theme_type_variation = "ButtonUnselected"
text = "Extra"
align = 1

[node name="Settings" type="Label" parent="Main/Buttons"]
visible = false
margin_top = 91.0
margin_right = 432.0
margin_bottom = 178.0
mouse_filter = 1
theme = ExtResource( 1 )
theme_type_variation = "ButtonUnselected"
text = "Comment jouer"
align = 1

[node name="Credits" type="Label" parent="Main/Buttons"]
margin_top = 91.0
margin_right = 256.0
margin_bottom = 178.0
theme = ExtResource( 1 )
text = "Cr√©dits"
align = 1

[node name="Exit" type="Label" parent="Main/Buttons"]
margin_top = 182.0
margin_right = 256.0
margin_bottom = 269.0
mouse_filter = 1
theme = ExtResource( 1 )
theme_type_variation = "ButtonUnselected"
text = "Quitter"
align = 1

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="LevelSelect" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="GridContainer" type="GridContainer" parent="LevelSelect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 566.0
margin_right = -741.0
custom_constants/vseparation = 15
custom_constants/hseparation = 30
columns = 3

[node name="LevelItem" parent="LevelSelect/GridContainer" instance=ExtResource( 5 )]
margin_bottom = 97.0
text = "Le commencement"
texture = ExtResource( 3 )
level = ExtResource( 7 )

[node name="LevelItem2" parent="LevelSelect/GridContainer" instance=ExtResource( 5 )]
margin_left = 236.0
margin_right = 442.0
margin_bottom = 97.0
theme_type_variation = "PanelContUnselected"
text = "Niveau 1"
texture = ExtResource( 3 )
level = ExtResource( 6 )

[node name="Credits" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="RichTextLabel" type="RichTextLabel" parent="Credits"]
anchor_left = 0.161
anchor_top = 0.288
anchor_right = 0.826
anchor_bottom = 0.835
margin_left = -0.120026
margin_top = -0.0400085
margin_right = -0.920044
margin_bottom = 0.199951
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]Godot Engine 3.5
Dialogic 1.5.1"
text = "Godot Engine 3.5
Dialogic 1.5.1"

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0, 0, 0, 0.156863 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -459.0
margin_top = -483.0
margin_right = 459.0
margin_bottom = 597.0
texture = ExtResource( 9 )

[connection signal="gui_input" from="Main/Buttons/Play" to="." method="_on_Play_gui_input"]
[connection signal="gui_input" from="Main/Buttons/Extra" to="." method="_on_Extra_gui_input"]
[connection signal="gui_input" from="Main/Buttons/Settings" to="." method="_on_Settings_gui_input"]
[connection signal="gui_input" from="Main/Buttons/Credits" to="." method="_on_Credits_gui_input"]
[connection signal="gui_input" from="Main/Buttons/Exit" to="." method="_on_Exit_gui_input"]
[connection signal="closed" from="LevelSelect" to="." method="_on_LevelSelect_closed"]
[connection signal="level_chosen" from="LevelSelect/GridContainer/LevelItem" to="." method="_on_LevelItem_level_chosen"]
[connection signal="level_chosen" from="LevelSelect/GridContainer/LevelItem2" to="." method="_on_LevelItem_level_chosen"]
